src/objects/Apttus_Rebate__IncentiveCap__c.object
<CustomObject>
    <description>Represents the ceiling imposed on incentive payments during a specified period</description>
    <fields>
        <fullName>Apttus_Rebate__CapLimit__c</fullName>
        <description>The cap limit</description>
        <label>Cap Limit</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Rebate__CapPeriod__c</fullName>
        <description>The period the cap applies to</description>
        <label>Cap Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                    <default>true</default>
                    <label>Monthly</label>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Lifetime</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Rebate__CapType__c</fullName>
        <description>The type of incentive cap</description>
        <label>Cap Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Amount</fullName>
                    <default>true</default>
                    <label>Amount</label>
                </value>
                <value>
                    <fullName>Volume</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Rebate__PriceListItemId__c</fullName>
        <description>ID of the associated price list item</description>
        <label>Price List Item</label>
        <referenceTo>Apttus_Config2__PriceListItem__c</referenceTo>
        <relationshipLabel>Incentive Caps</relationshipLabel>
        <relationshipName>IncentiveCaps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Incentive Cap</label>
    <nameField>
        <displayFormat>CP-{0000000000}</displayFormat>
        <label>Cap Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incentive Caps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>